# libjq-haskell

./: .gitignore  Libjq.hsc  libjq-haskell.cabal  stack.yaml
Libjq/: Format.hs
cbits/: wrapper.c
include/: wrapper.h
include/jq-jq-1.5/: Makefile  Makefile.in  config.status  configure  libtool
include/jq-jq-1.5/.deps/: builtin.Plo  bytecode.Plo  compile.Plo  execute.Plo  jq_test.Plo  jv.Plo  jv_alloc.Plo  jv_aux.Plo  jv_dtoa.Plo  jv_file.Plo  jv_parse.Plo  jv_print.Plo  lexer.Plo  linker.Plo  locfile.Plo  main.Po  parser.Plo  util.Plo
include/jq-jq-1.5/autom4te.cache/: output.3  requests  traces.3  traces.4
